fix border on mobile cards

--- a/src/main/resources/static/css/verification.css
+++ b/src/main/resources/static/css/verification.css
@@ -185,7 +185,7 @@ h5 {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 2px;
     }
 
@@ -195,7 +195,7 @@ h5 {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 2px;
     }
 
@@ -205,7 +205,7 @@ h5 {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 2px;
     }
 
@@ -215,7 +215,7 @@ h5 {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 2px;
     }
 
@@ -225,7 +225,6 @@ h5 {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        border: 1px solid grey;
         padding: 2px;
     }
 }
